--- a/ml/experiments.ipynb
+++ b/ml/experiments.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [
     {
@@ -11,7 +11,7 @@
        "True"
       ]
      },
-     "execution_count": 23,
+     "execution_count": 1,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -36,7 +36,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -66,7 +66,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -79,7 +79,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -92,7 +92,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -116,7 +116,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -125,61 +125,137 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Collection already exists\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "res = load_chunk_persist_pdf() "
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "ename": "TypeError",
-     "evalue": "cannot pickle 'sqlite3.Connection' object",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[1;31mTypeError\u001b[0m                                 Traceback (most recent call last)",
-      "Cell \u001b[1;32mIn[21], line 2\u001b[0m\n\u001b[0;32m      1\u001b[0m \u001b[39mwith\u001b[39;00m \u001b[39mopen\u001b[39m(\u001b[39m'\u001b[39m\u001b[39mvector_db.pkl\u001b[39m\u001b[39m'\u001b[39m, \u001b[39m'\u001b[39m\u001b[39mwb\u001b[39m\u001b[39m'\u001b[39m) \u001b[39mas\u001b[39;00m f:\n\u001b[1;32m----> 2\u001b[0m     pickle\u001b[39m.\u001b[39;49mdump(res, f)\n",
-      "\u001b[1;31mTypeError\u001b[0m: cannot pickle 'sqlite3.Connection' object"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
-    "with open('vector_db.pkl', 'wb') as f:\n",
-    "    pickle.dump(res, f)"
+    "# with open('vector_db.pkl', 'wb') as f:\n",
+    "#     pickle.dump(res, f)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "get_llm_response(\"What is the purpose of this study?\", res)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import requests\n",
+    "from langchain.vectorstores import Chroma\n",
+    "import shutil\n",
+    "import zipfile\n",
+    "\n",
+    "zip_path = './temp_storage/chroma_store_1_pdf.zip'\n",
+    "db_path = './temp_storage/chroma_store_1'\n",
+    "url = \"http://ajuq4-ruaaa-aaaaa-qaaga-cai.localhost:4943/chroma_store_1_pdf.zip\"\n",
+    "\n",
+    "def run_query(query):\n",
+    "    os.makedirs('./temp_storage', exist_ok=True)\n",
+    "\n",
+    "    response = requests.get(url)\n",
+    "    if response.status_code == 200:\n",
+    "        with open(zip_path, 'wb') as f:\n",
+    "            f.write(response.content)\n",
+    "        message = \"File downloaded successfully.\"\n",
+    "    else:\n",
+    "        message = f\"Failed to download the file. Status code: {response.status_code}\"\n",
+    "        return 0\n",
+    "\n",
+    "    with zipfile.ZipFile(zip_path, 'r') as zip_ref:\n",
+    "        zip_ref.extractall(db_path)\n",
+    "    print(message)\n",
+    "    db = Chroma(persist_directory=db_path, embedding_function=OpenAIEmbeddings())\n",
+    "\n",
+    "\n",
+    "    model_name = \"gpt-3.5-turbo\"\n",
+    "    llm = ChatOpenAI(model_name=model_name)\n",
+    "    chain = load_qa_chain(llm, chain_type=\"stuff\")\n",
+    "\n",
+    "    matching_docs = db.similarity_search(query)\n",
+    "    answer = chain.run(input_documents=matching_docs, question=query)    \n",
+    "\n",
+    "    return answer\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import shutil\n",
+    "db_path = './temp_storage/chroma_store_1'\n",
+    "\n",
+    "db = Chroma(persist_directory=db_path, embedding_function=OpenAIEmbeddings())"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
-     "data": {
-      "text/plain": [
-       "'The purpose of the study is to promote and strengthen measures to prevent and combat corruption more efficiently and effectively, promote international cooperation and technical assistance in the prevention of and fight against corruption, including asset recovery, and to promote integrity, accountability, and proper management of public affairs and public property.'"
-      ]
-     },
-     "execution_count": 19,
-     "metadata": {},
-     "output_type": "execute_result"
+     "ename": "PermissionError",
+     "evalue": "[WinError 32] The process cannot access the file because it is being used by another process: './temp_storage\\\\chroma_store_1\\\\chroma.sqlite3'",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mPermissionError\u001b[0m                           Traceback (most recent call last)",
+      "Cell \u001b[1;32mIn[9], line 1\u001b[0m\n\u001b[1;32m----> 1\u001b[0m shutil\u001b[39m.\u001b[39;49mrmtree(\u001b[39m'\u001b[39;49m\u001b[39m./temp_storage\u001b[39;49m\u001b[39m'\u001b[39;49m)\n",
+      "File \u001b[1;32mc:\\Users\\asimj\\AppData\\Local\\Programs\\Python\\Python310\\lib\\shutil.py:749\u001b[0m, in \u001b[0;36mrmtree\u001b[1;34m(path, ignore_errors, onerror)\u001b[0m\n\u001b[0;32m    747\u001b[0m     \u001b[39m# can't continue even if onerror hook returns\u001b[39;00m\n\u001b[0;32m    748\u001b[0m     \u001b[39mreturn\u001b[39;00m\n\u001b[1;32m--> 749\u001b[0m \u001b[39mreturn\u001b[39;00m _rmtree_unsafe(path, onerror)\n",
+      "File \u001b[1;32mc:\\Users\\asimj\\AppData\\Local\\Programs\\Python\\Python310\\lib\\shutil.py:614\u001b[0m, in \u001b[0;36m_rmtree_unsafe\u001b[1;34m(path, onerror)\u001b[0m\n\u001b[0;32m    612\u001b[0m         onerror(os\u001b[39m.\u001b[39mpath\u001b[39m.\u001b[39mislink, fullname, sys\u001b[39m.\u001b[39mexc_info())\n\u001b[0;32m    613\u001b[0m         \u001b[39mcontinue\u001b[39;00m\n\u001b[1;32m--> 614\u001b[0m     _rmtree_unsafe(fullname, onerror)\n\u001b[0;32m    615\u001b[0m \u001b[39melse\u001b[39;00m:\n\u001b[0;32m    616\u001b[0m     \u001b[39mtry\u001b[39;00m:\n",
+      "File \u001b[1;32mc:\\Users\\asimj\\AppData\\Local\\Programs\\Python\\Python310\\lib\\shutil.py:619\u001b[0m, in \u001b[0;36m_rmtree_unsafe\u001b[1;34m(path, onerror)\u001b[0m\n\u001b[0;32m    617\u001b[0m             os\u001b[39m.\u001b[39munlink(fullname)\n\u001b[0;32m    618\u001b[0m         \u001b[39mexcept\u001b[39;00m \u001b[39mOSError\u001b[39;00m:\n\u001b[1;32m--> 619\u001b[0m             onerror(os\u001b[39m.\u001b[39;49munlink, fullname, sys\u001b[39m.\u001b[39;49mexc_info())\n\u001b[0;32m    620\u001b[0m \u001b[39mtry\u001b[39;00m:\n\u001b[0;32m    621\u001b[0m     os\u001b[39m.\u001b[39mrmdir(path)\n",
+      "File \u001b[1;32mc:\\Users\\asimj\\AppData\\Local\\Programs\\Python\\Python310\\lib\\shutil.py:617\u001b[0m, in \u001b[0;36m_rmtree_unsafe\u001b[1;34m(path, onerror)\u001b[0m\n\u001b[0;32m    615\u001b[0m \u001b[39melse\u001b[39;00m:\n\u001b[0;32m    616\u001b[0m     \u001b[39mtry\u001b[39;00m:\n\u001b[1;32m--> 617\u001b[0m         os\u001b[39m.\u001b[39;49munlink(fullname)\n\u001b[0;32m    618\u001b[0m     \u001b[39mexcept\u001b[39;00m \u001b[39mOSError\u001b[39;00m:\n\u001b[0;32m    619\u001b[0m         onerror(os\u001b[39m.\u001b[39munlink, fullname, sys\u001b[39m.\u001b[39mexc_info())\n",
+      "\u001b[1;31mPermissionError\u001b[0m: [WinError 32] The process cannot access the file because it is being used by another process: './temp_storage\\\\chroma_store_1\\\\chroma.sqlite3'"
+     ]
     }
    ],
    "source": [
-    "get_llm_response(\"What is the purpose of this study?\", res)\n"
+    "shutil.rmtree('./temp_storage')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "run_query(\"what is the document about?\")\n",
+    "shutil.rmtree('./temp_storage')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "db.save(\"faiss_index.bin\")\n"
    ]
   },
   {
