Add question answering logic for server

--- a/ml/experiments.ipynb
+++ b/ml/experiments.ipynb
@@ -410,14 +410,7 @@
     "            \"correct_index\": correct_index\n",
     "        })\n",
     "    \n",
-    "    return quiz_results\n",
-    "\n",
-    "\n",
-    "# Example usage (Ensure you have the necessary setup for this function to work):\n",
-    "# query = \"Describe the Great Wall of China.\"\n",
-    "# quiz_items = generate_quiz_from_query(query)\n",
-    "# print(quiz_items)\n",
-    "\n"
+    "    return quiz_results\n"
    ]
   },
   {
@@ -466,95 +459,6 @@
     "    print(i['answers'])\n",
     "    print(i['correct_index'])"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "db.save(\"faiss_index.bin\")\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 17,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "from langchain.chains.base import Chain\n",
-    "import random\n",
-    "\n",
-    "class EnhancedGenerativeQA(Chain):\n",
-    "    def __init__(self, llm, max_tokens=150):\n",
-    "        super().__init__()\n",
-    "        self.llm = llm\n",
-    "        self.max_tokens = max_tokens\n",
-    "\n",
-    "    def generate_question_and_correct_answer(self, context):\n",
-    "        prompt = f\"Based on the following context, generate a relevant question and its correct answer (The response format is \\\"Question: <question> Answer: <answer>\\\"):\\n\\n{context}\"\n",
-    "        response = self.llm.complete(prompt, max_tokens=100)  # Adjust token count as needed\n",
-    "        # Assuming the response format is \"Question: <question> Answer: <answer>\"\n",
-    "        split_response = response.split(\"Answer:\")\n",
-    "        question = split_response[0].replace(\"Question:\", \"\").strip()\n",
-    "        answer = split_response[1].strip() if len(split_response) > 1 else \"\"\n",
-    "        return question, answer\n",
-    "\n",
-    "    def generate_incorrect_answers(self, correct_answer, context, num_incorrect=3):\n",
-    "        prompt = f\"Generate {num_incorrect} incorrect answers for a question whose correct answer is '{correct_answer}'. Make sure each answer is in a newline. The context of the question is: {context}.\\n\"\n",
-    "        response = self.llm.complete(prompt, max_tokens=60 * num_incorrect)  # Adjust based on needs\n",
-    "        incorrect_answers = response.split('\\n')\n",
-    "        # Ensure we only get the number of incorrect answers requested\n",
-    "        return incorrect_answers[:num_incorrect]\n",
-    "\n",
-    "    def run(self, context):\n",
-    "        question, correct_answer = self.generate_question_and_correct_answer(context)\n",
-    "        incorrect_answers = self.generate_incorrect_answers(correct_answer, context)\n",
-    "        # Ensure the correct answer is included in the options and shuffle them\n",
-    "        options = [correct_answer] + incorrect_answers\n",
-    "        random.shuffle(options)\n",
-    "        return {\n",
-    "            \"question\": question,\n",
-    "            \"options\": options,\n",
-    "            \"correct_answer\": correct_answer\n",
-    "        }\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 18,
-   "metadata": {},
-   "outputs": [
-    {
-     "ename": "TypeError",
-     "evalue": "Can't instantiate abstract class EnhancedGenerativeQA with abstract methods _call, input_keys, output_keys",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[1;31mTypeError\u001b[0m                                 Traceback (most recent call last)",
-      "Cell \u001b[1;32mIn[18], line 4\u001b[0m\n\u001b[0;32m      1\u001b[0m model_name \u001b[39m=\u001b[39m \u001b[39m\"\u001b[39m\u001b[39mgpt-3.5-turbo\u001b[39m\u001b[39m\"\u001b[39m\n\u001b[0;32m      2\u001b[0m llm \u001b[39m=\u001b[39m ChatOpenAI(model_name\u001b[39m=\u001b[39mmodel_name)\n\u001b[1;32m----> 4\u001b[0m enhanced_generative_qa \u001b[39m=\u001b[39m EnhancedGenerativeQA(llm)\n\u001b[0;32m      6\u001b[0m context \u001b[39m=\u001b[39m \u001b[39m\"\u001b[39m\u001b[39mThe Great Wall of China is renowned for its historical significance and architectural grandeur, stretching over 21,000 kilometers.\u001b[39m\u001b[39m\"\u001b[39m\n\u001b[0;32m      7\u001b[0m qa_setup \u001b[39m=\u001b[39m enhanced_generative_qa\u001b[39m.\u001b[39mrun(context)\n",
-      "\u001b[1;31mTypeError\u001b[0m: Can't instantiate abstract class EnhancedGenerativeQA with abstract methods _call, input_keys, output_keys"
-     ]
-    }
-   ],
-   "source": [
-    "model_name = \"gpt-3.5-turbo\"\n",
-    "llm = ChatOpenAI(model_name=model_name)\n",
-    "\n",
-    "enhanced_generative_qa = EnhancedGenerativeQA(llm)\n",
-    "\n",
-    "context = \"The Great Wall of China is renowned for its historical significance and architectural grandeur, stretching over 21,000 kilometers.\"\n",
-    "qa_setup = enhanced_generative_qa.run(context)\n",
-    "\n",
-    "print(qa_setup)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
