update upload script and server code

--- a/ml/experiments.ipynb
+++ b/ml/experiments.ipynb
@@ -185,7 +185,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -195,7 +195,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -211,10 +211,10 @@
     {
      "data": {
       "text/plain": [
-       "'The document seems to be about the Forum Theatre Process. It could be a guide, manual, or description of the process and its implementation in a particular context.'"
+       "'The document is about a series of modules on anti-corruption designed for academics and professionals. These modules cover various topics related to corruption, such as its definition, impact on human rights, good governance, comparative politics, public and private sector corruption, detection and investigation methods, gender issues, education, citizen participation, and its relationship with peace and security. The modules aim to connect theory to practice, encourage critical thinking, and use interactive teaching approaches. They are multi-disciplinary, adaptable to different contexts, and available in multiple languages.'"
       ]
      },
-     "execution_count": 9,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
